--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
-	"extends": "@sindresorhus/tsconfig",
-	"compilerOptions": {
-		"module": "commonjs",
-		"jsx": "react",
-		"esModuleInterop": true,
-		"outDir": "dist"
-	},
-	"include": ["source"]
+  "extends": "@sindresorhus/tsconfig",
+  "compilerOptions": {
+    "module": "commonjs",
+    "jsx": "react",
+    "esModuleInterop": true,
+    "outDir": "dist",
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true
+  },
+  "include": ["source"]
 }
